Add ability to archive container logs to artifact repository
