# pkg/apis/workflow/v1alpha1/types.go
@@ -272,6 +272,9 @@ type Artifact struct {
 // It is also used to describe the location of multiple artifacts such as the archive location
 // of a single workflow step, which the executor will use as a default location to store its files.
 type ArtifactLocation struct {
+	// ArchiveLogs indicates if the container logs should be archived
+	ArchiveLogs *bool `json:"archiveLogs,omitempty"`
+
 	// S3 contains S3 artifact location details
 	S3 *S3Artifact `json:"s3,omitempty"`
 
